Update names & metadata

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "mathquill-block",
+	"name": "direct-math-input",
 	"version": "0.1.0",
-	"description": "Example block written with ESNext standard and JSX support – build step required.",
-	"author": "The WordPress Contributors",
+	"description": "Type math expressions directly into your page with MathQuill/LaTeX.",
+	"author": "Eoghan McIlwaine <mcilwaine@gmail.com>",
 	"license": "GPL-2.0-or-later",
 	"main": "build/index.js",
 	"scripts": {
