--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@wordpress/scripts": "^20.0.2"
 	},
 	"dependencies": {
+		"@edtr-io/mathquill": "^0.11.0",
 		"react-mathquill": "^1.0.2"
 	}
 }
