--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "math-input-with-mathquill",
 	"version": "0.1.1",
 	"description": "Type math expressions directly into your page with MathQuill/LaTeX.",
-	"author": "Eoghan McIlwaine <mcilwaine@gmail.com>",
+	"author": "eoghanmcilwaine",
 	"license": "GPL-2.0-or-later",
 	"main": "build/index.js",
 	"scripts": {
