--- a/.github/workflows/deploy-plugin-to-wordpress.yml
+++ b/.github/workflows/deploy-plugin-to-wordpress.yml
@@ -20,6 +20,7 @@ jobs:
         git config --global user.email "deploybot@example.com"
         git config --global user.name "DeployBot on GitHub"
         git add --force build/fonts/* && git commit -m "Add any font files"
+        git add --force build/* && git commit -m "Add built code"
         cd -
     - name: WordPress Plugin Deploy
       uses: 10up/action-wordpress-plugin-deploy@stable
