--- a/.github/workflows/deploy-plugin-to-wordpress.yml
+++ b/.github/workflows/deploy-plugin-to-wordpress.yml
@@ -28,4 +28,4 @@ jobs:
         SVN_PASSWORD: ${{ secrets.SVN_PASSWORD }}
         SVN_USERNAME: ${{ secrets.SVN_USERNAME }}
         SLUG: math-input-with-mathquill
-        ASSETS_DIR: assets
+        ASSETS_DIR: wordpress-org
