--- a/.github/workflows/deploy-plugin-to-wordpress.yml
+++ b/.github/workflows/deploy-plugin-to-wordpress.yml
@@ -8,7 +8,18 @@ jobs:
     name: New tag
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
+    - name: checkout source
+      uses: actions/checkout@v2
+    - name: generate lfs file list
+      run: git lfs ls-files -l | cut -d' ' -f1 | sort > .lfs-assets-id
+    - name: restore lfs cache
+      uses: actions/cache@v2
+      id: lfs-cache
+      with:
+        path: .git/lfs
+        key: ${{ runner.os }}-lfs-${{ hashFiles('.lfs-assets-id') }}-v1
+    - name: pull lfs files
+      run: git lfs pull
     - name: Build
       run: |
         npm install
